--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </a>
         <ul class="nav_list">
             <li>
-                <a href="#hebergements">Hébergement</a>
+                <a href="#hebergements">Hébergements</a>
             </li>
             <li>
                 <a href="#activites">Activités</a>
